    - align names of process option names with system options
      (mem-changes -> mem-change, cpu-changes -> cpu-change)
  * mem-cpu-monitor updates:
    - support for sub-second intervals
    - refactored to use/depend on the new libsp-measure library
    - support for starting monitored process (-exec) and monitoring
      processes starting after mem-cpu-monitor starts (-name).
    Fixes: NB#161734, NB#159709

 -- Kiryl Shutsemau <kiryl.shutsemau@nokia.com>  Fri, 16 Apr 2010 16:11:40 +0200

sp-memusage (1.1.7) unstable; urgency=low

  * CI tests added.

 -- Kiryl Shutsemau <kiryl.shutsemau@nokia.com>  Mon, 18 Jan 2010 11:11:40 +0200

sp-memusage (1.1.6) unstable; urgency=low

  * Do not shows private clean data changes in the "changes" column.
    Fixes: NB#151783

 -- Kiryl Shutsemau <kiryl.shutsemau@nokia.com>  Mon, 18 Jan 2010 11:11:40 +0200

sp-memusage (1.1.5) unstable; urgency=low

  * Support swap in mem-smaps-private and mem-dirty-code-pages scripts.
    Fixes: NB#144137

 -- Eero Tamminen <eero.tamminen@nokia.com>  Tue,  3 Nov 2009 13:36:40 +0200

sp-memusage (1.1.4) unstable; urgency=low

  * mem-cpu-monitor:
   + mem-cpu-monitor: report CPU speed. Fixes: NB#139669
   + mem-cpu-monitor: implementation of options that make it output info only
     when something changes. Fixes: NB#122024

 -- Kiryl Shutsemau <kiryl.shutsemau@nokia.com>  Mon, 26 Oct 2009 10:39:35 +0200

sp-memusage (1.1.3) unstable; urgency=low

  * Add a manual page for mem-cpu-monitor. Fixes(NB#120058)

 -- Eero Tamminen <eero.tamminen@nokia.com>  Jul, 14 Jul 2009 13:10:40 +0200

sp-memusage (1.1.2) unstable; urgency=low

  * Always have something in BL column, if it's shown. Fixes(NB#116477)

 -- Kiryl Shutsemau <kiryl.shutsemau@nokia.com>  Mon, 15 Jun 2009 17:18:40 +0200

sp-memusage (1.1.1) unstable; urgency=low

  * Tommi's rewrite of mem-cpu-monitor.  Supports giving multiple pids,
    has colors when running on tty, flushes output when redirected to